--- a/src/index.css
+++ b/src/index.css
@@ -159,7 +159,7 @@
     color: black;
 }
 #playerInfoContainer{
-    width: 70%;
+    /* width: 70%; */
 }
 .playerInfo{
     display: flex;
@@ -222,6 +222,9 @@ label{
 .playerPieceImage{
     display: flex;
     width: 40px;
+    border: 2px solid transparent;
+    background-color: transparent;
+    padding: 2px;
 }
 
 #playerPiecesContainer input{
