--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,45 @@
 
 /*--------- */
 
+#motherboard{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
 /*--------- main game board */
 #mainGameBoard{
+    display: flex;
     position: relative; 
     width: 735px; 
     height: 735px; 
     border: 1px solid black; 
-    margin: 0 auto;
+}
+
+#btnsContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#newGameBtn{
+    display: flex;
+    width: 200px;
+    height: 50px;
+    background-color: red;
+    color: white;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 30px;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+}
+#newGameBtn:hover{
+    cursor: pointer;
+    background-color: pink;
+    color: black;
 }
 
 /*--------- tiles */
@@ -73,6 +105,7 @@
 /*--------- player controller */
 /* main container divs */
 .playerModalContainer{
+    visibility: hidden;
     position: fixed;
     top: 0;
     left: 0;
@@ -113,33 +146,6 @@
     font-size: 20px;
     /* margin: 20px; */
 }
-
-#btnsContainer{
-    display: flex;
-    width: 80%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-#newGameBtn{
-    display: flex;
-    width: 200px;
-    height: 50px;
-    background-color: red;
-    color: white;
-    margin: 20px auto;
-    padding: 10px;
-    border-radius: 20px;
-    font-size: 30px;
-    align-items: center;
-    justify-content: center;
-    user-select: none;
-}
-#newGameBtn:hover{
-    cursor: pointer;
-    background-color: pink;
-    color: black;
-}
 #addPlayerBtn{
     display: flex;
     justify-content: center;
@@ -168,7 +174,7 @@
     align-items: center;
     width: 100%;
     border: 1px solid rgb(0, 0, 0);
-    padding: 3px 5px;
+    padding: 0px 5px;
     margin: 10px;
 }
 #startGameBtn{
@@ -181,8 +187,10 @@
     border-radius: 10px;
     color: white;
     font-size: 22px;
-    margin: 20px;
+    margin: 10px;
     user-select: none;
+    transition-property: background-color;
+    transition: 0.5s;
 }
 #startGameBtn:hover{
     cursor: pointer;
@@ -194,7 +202,7 @@
     display: flex;
     width: 40%;
     justify-content: center;
-    margin: 20px 0px;
+    margin: 10px 0px;
 }
 .playerName{
     border: 1px solid black;
@@ -221,10 +229,10 @@ label{
 }
 .playerPieceImage{
     display: flex;
-    width: 40px;
+    width: 30px;
     border: 2px solid transparent;
     background-color: transparent;
-    padding: 2px;
+    padding: 1px;
 }
 
 #playerPiecesContainer input{
@@ -243,4 +251,16 @@ label{
     border: 2px solid black;
     background-color: yellow;
     padding: 2px;
+}
+
+.piecesLabel:not(.enabled){
+    opacity: 0.5;
+    pointer-events: none;
+}
+.piecesLabel.enabled{
+
+}
+
+.alertBox{
+    color: red;
 }
