--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,8 @@
     position: relative; 
     width: 735px; 
     height: 735px; 
-    border: 1px solid black; 
+    /* border: 2px solid black;  */
+    background-color: #cde6d0;
 }
 /*--------- Buttons */
 #btnsContainer{
@@ -45,24 +46,47 @@
 /*--------- tiles */
 .cornerTiles {
     position: absolute;
+    background-size: contain;
+    box-sizing: border-box;
 }
 .smallTiles{
     position: absolute;
-    border: 1px solid black;
+    border: 2px solid black;
     font-size: 14px;
     overflow-wrap: break-word;
     hyphens: auto;
     box-sizing: border-box;
     padding: 5px;
 }
+.corner_playerContainer{
+    border: 1px solid red;
+    width: 90%;
+    height: 90%;
+    display: grid;
+    gap: 1px;
+    grid-template-columns: 1fr 1fr;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+}
+.small_playerContainer{
+    border: 1px solid red;
+    width: 90%;
+    height: 90%;
+    display: grid;
+    gap: 3px;
+    grid-template-columns: 1fr 1fr;
+    position: absolute;
+    top: 5px;
+    left: 2px;
+}
 
 /*--------- dice */
 #mainDiceDiv{
-    top: 300px; 
-    left: 250px; 
-    position: absolute; 
     width: 250px; 
     height: 200px;
+    visibility: hidden;
+    margin-bottom: 2rem;
 }
 #dicesContainerDiv{
     display: flex; 
@@ -286,5 +310,11 @@ label{
 
 .sb_header{
     display: grid;
+    gap: 0.5rem;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 
+}
+
+.playerPiece{
+    width: 40px;
 }
